internal/controller/template/sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test
  namespace: test
spec:
  replicas: 0
  serviceName: test
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: main
        image: test-image
        ports:
        - containerPort: 80
