internal/controller/template/srv-pod.yml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: test
spec:
  selector:
  ports:
  - port: 80
    name: http
    targetPort: 80
