internal/controller/template/srv.yml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: test
spec:
  clusterIP: None 
  selector:
  ports:
  - port: 80
    name: http 
    targetPort: 80
