internal/controller/template/np-group.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: m-group
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: your-label-key
          operator: Exists
  egress:
  - to:
    - podSelector:
        matchExpressions:
        - key: your-label-key
          operator: Exists
