internal/controller/template/np-operator.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: m-allow-operator
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: r-system
